--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Roman Belorussky",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
@@ -23,6 +24,7 @@
     "tslog": "^4.9.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
